exam/yaml-collection/mock1_2/beta-apps.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: beta-apps
  name: beta-apps
spec:
  replicas: 3
  selector:
    matchLabels:
      app: beta-apps
  template:
    metadata:
      labels:
        app: beta-apps
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: app_type
                values: ["beta"]
                operator: In
      containers:
      - name: nginx​
        image: nginx
        resources:
          requests:
            memory: "128Mi"
            cpu: "0.2"
          limits:
            memory: "256Mi"
            cpu: "0.2"
        readinessProbe:
          httpGet:
            path: /healtz
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 6
