exam/yaml-collection/mock1_2/sega.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: sega
  name: sega
spec:
  containers:
  - image: busybox
    name: tails
    command:
      - "sh"
      - "-c"
      - "sleep 3600"
  - image: nginx
    name: sonic
